--- a/Main/views/profile.handlebars
+++ b/Main/views/profile.handlebars
@@ -27,17 +27,17 @@
     </form>
   </div>
 
-  {{#if projects.length}}
+  {{#if sleepCycle.length}}
   <div class="col-md-6 project-list">
     <h3>Current Projects:</h3>
 
-    {{#each projects as |project|}}
+    {{#each sleepCycles as |sleepCycle|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
+        <h4><a href="/sleep/{{sleepCycle.id}}">{{sleepCycle.hours_of_sleep}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" data-id="{{sleepCycle.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
