--- a/Main/views/profile.handlebars
+++ b/Main/views/profile.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
+    <h2>Welcome, {{ name }}!</h2>
   </div>
 </div>
 
@@ -14,7 +14,7 @@
         <input class="form-input" type="text" id="project-name" name="project-name" />
       </div>
       <div class="form-group">
-        <label for="project-funding">Hours slept:</label>
+        <label for="project-funding">Hours of Sleep:</label>
         <input class="form-input" type="number" id="project-funding" name="project-funding" />
       </div>
       <div class="form-group">
@@ -29,7 +29,7 @@
 
   {{#if sleepCycle.length}}
   <div class="col-md-6 project-list">
-    <h3>Current Projects:</h3>
+    <h3>Past Journals:</h3>
 
     {{#each sleepCycles as |sleepCycle|}}
     <div class="row mb-2">
