handlebars & js consistency

--- a/Main/views/homepage.handlebars
+++ b/Main/views/homepage.handlebars
@@ -3,7 +3,7 @@
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      <a href="/sleep/{{sleepCycle.id}}">{{project.name}}</a>
+      <a href="/sleep/{{sleepCycle.id}}">{{sleepCycle.name}}</a>
     </h2>
     <p>
       {{format_amount sleepCycle.hours_of_sleep}} hours slept!
