--- a/Main/views/sleep.handlebars
+++ b/Main/views/sleep.handlebars
@@ -3,10 +3,9 @@
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
+    {{format_amount hours}} needed
   </p>
   <p>
-    <button class="btn btn-primary">Fund this Project!</button>
+    <button class="btn btn-primary">Check this journal</button>
   </p>
 </div>
